need to resolve .galerie h3 on mobile device

--- a/style.css
+++ b/style.css
@@ -12,27 +12,19 @@
 }
 
 .container {
-    /* 1400px */
-    width: 1200px;   
+    width: 1200px;
     margin: auto;
 }
 
-
 /* ----------------------------------   NAVBAR */
-/* #logo {
-    align-items: flex-start;
-    position: relative;
-    top: 22px;
-} */
-
 nav {
     display: flex;
     align-items: flex-end;
     margin-bottom: 1rem;
-    
+
 }
 
-ul  {
+ul {
     display: flex;
     margin: 0 auto;
     list-style: none;
@@ -49,19 +41,19 @@ nav li a {
 
 /* ------------------------------------  COVER */
 
-.cover{
+.cover {
     position: relative;
     vertical-align: bottom;
 }
+
 .cover_img {
     width: 100%;
     vertical-align: bottom;
-    /* position: relative; */
 }
 
 .cover_bottom {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     display: flex;
     color: aliceblue;
     background-color: #5e94006d;
@@ -134,7 +126,6 @@ article p {
 
 /* ------------------------------------  ASIDE */
 .propos {
-    /* position: relative; */
     width: 357px;
     display: flex;
     flex-direction: column;
@@ -150,7 +141,6 @@ article p {
 }
 
 .propos h2 {
-
     color: var(--bg);
     font-weight: bold;
     text-transform: uppercase;
@@ -172,8 +162,6 @@ article p {
     margin: 60px 0 30px 0;
 }
 
-
-
 /* ------------------------------------  FOOTER*/
 footer {
     position: relative;
@@ -185,9 +173,8 @@ section h3 {
     text-transform: uppercase;
 }
 
-
 input {
-    margin:10px 0 0 0;
+    margin: 10px 0 0 0;
     padding: 5px;
     font-size: large;
     border-color: var(--border-input)
@@ -217,8 +204,8 @@ form {
 }
 
 footer img {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     cursor: pointer;
     box-flex-group: var(--bg);
 }
@@ -234,18 +221,27 @@ footer img {
 
 /* ------------------------------------  @media */
 @media (max-width: 1200px) {
-    .container, nav {
+
+    .container,
+    nav {
         width: 100%;
     }
- }
+}
 
- /* Medium devices (tablets, 768px and less) */
+@media (max-width: 1174px) {
+    
+   .combo, .news-letter {
+       flex-direction: column;
+   }
+}
+
+/* Medium devices (tablets, 768px and less) */
 @media (max-width: 768px) {
 
-    .container{
+    .container {
         width: 100%;
-        
-    } 
+
+    }
 
     ul {
         flex-direction: column;
@@ -260,24 +256,24 @@ footer img {
     article {
         width: 100%;
     }
-    
+
     main {
         flex-direction: column;
     }
-    
-    .propos{
-        width: 100%; 
+
+    .propos {
+        width: 100%;
     }
-    
+
     .propos p {
         font-size: 1.5rem;
     }
-    
+
     footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-       
+
     }
 
     form {
@@ -288,13 +284,14 @@ footer img {
 
     }
 
-    .news-letter{
+    .news-letter {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 500px;
+        width: 450px;
         text-align: center;
         padding: 4rem;
+        background-color: aquamarine;
     }
 
     .inputs {
@@ -302,22 +299,35 @@ footer img {
     }
 
     input {
-        width: 500px;
+        width: 450px;
         margin-top: 20px;
 
     }
-};
 
- /* Small devices (landscape phones, 576px and less) */
+    .combo {
+        gap: 30px;
+        width: 450px;
+        background-color: aqua;
+    }
+
+    .combo section h3 {
+        text-align: center;
+    }
+
+   
+
+   
+    
+}
+
+
+
+/* Small devices (landscape phones, 576px and less)
 @media (max-width: 576px) {
     
-    .container{
-        display: flex;
-        flex-direction: column;
-    }
     
 };
-
+ */
 
 
 
@@ -338,6 +348,9 @@ footer img {
 
 
 /* ------------------------------------   TEST */
+
+
+
 .parents {
     display: flex;
     margin-top: 100px;
